--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,5 +39,9 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      # Ensure arm64 is NOT excluded for simulator
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = "i386"
+    end
   end
 end
