--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   google_mlkit_text_recognition: ^0.15.0
   permission_handler: ^12.0.1
   provider: ^6.1.1
+  flutter_dotenv: ^5.1.0
+  google_generative_ai: ^0.4.0
+  uuid: ^4.2.1
+  intl: ^0.19.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +29,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - .env
